# python-explicit-implementation

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  test.yml
src/explicit_implementation/: __init__.py  decorators.py  interface.py
tests/: test_explicit_implementation.py
