[project]
name = "explicit-implementation"
version = "0.1.1"
description = "A Python library for explicit interface implementations with compile-time safety"
readme = "README.md"
authors = [
    { name = "Binyamin Y Cohen", email = "biny@xpo.dev" }
]
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
keywords = ["interface", "abc", "explicit", "implementation", "typing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/xpodev/explicit-implementation"
Repository = "https://github.com/xpodev/explicit-implementation"
Issues = "https://github.com/xpodev/explicit-implementation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
